--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.google.dagger:dagger:2.0.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
