--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.google.dagger:dagger:2.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:appcompat-v7:23.0.1'
 }
