--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.google.dagger:dagger:2.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.balysv:material-ripple:1.0.2'
 }
